--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -1,13 +1,14 @@
 @font-primary: helvetica, arial, sans-serif;
 @font-georgia: georgia, times, serif;
 @font-titles: "Bitter", @font-georgia;
-@font-special: "Exo 2", @font-primary;
+@font-special: "Exo 2.0", @font-primary;
 @font-base: "Open Sans", @font-primary;
 @font-size: 16px;
 @font-size-xs: 12px;
 @font-size-sm: 14px;
 @font-size-md: 18px;
 @font-size-lg: 20px;
+@font-size-xl: 28px;
 
 @color-primary: #0288d1;
 @color-primary-bright: #4fc3f7;
@@ -36,6 +37,7 @@
 @color-subtle: #ededed;
 @color-gray: #888;
 @color-gray-dark: #666;
+@color-gray-medium: #999;
 @color-gray-light: #ddd;
 @color-gray-blue: #607d8b;
 @color-body: #fbfbfb;
