--- a/public/less/fonts.less
+++ b/public/less/fonts.less
@@ -40,6 +40,20 @@
 	-moz-osx-font-smoothing: grayscale;
 	font-smoothing: antialiased;
 }
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	font-size: 24px;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
 
 .icn-size-sm {
 	.icn {
@@ -90,6 +104,11 @@
 [data-icon]:before {
 	content: attr(data-icon);
 }
+
+.icon-user:before { content: "\e600"; }
+.icon-trash:before { content: "\e601"; }
+.icon-check:before { content: "\e602"; }
+.icon-edit:before { content: "\e603"; }
 
 .octicon-alert:before { content: '\f02d'} /*  */
 .octicon-alignment-align:before { content: '\f08a'} /*  */
