Add some comments to the responsive stylesheet

--- a/public/less/responsive.less
+++ b/public/less/responsive.less
@@ -1,7 +1,7 @@
 @import "variables.less";
 @import "mixins.less";
-@import "bs3-mixins.less";
 
+/* xs */
 @media (max-width: 767px) {
 	nav.nav-main {
 		ul {
@@ -102,6 +102,7 @@
 	}
 }
 
+/* sm */
 @media (min-width: 768px) and (max-width: 991px) {
 	nav.nav-main {
 		ul {
@@ -193,6 +194,7 @@
 	}
 }
 
+/* md */
 @media (min-width: 992px) and (max-width: 1199px) {
 	header {
 		.brand {
@@ -201,4 +203,5 @@
 	}
 }
 
+/* lg */
 @media (min-width: 1200px) {}
