--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1067,19 +1067,6 @@ hr.partial-split {
 		}
 	}
 
-	.list-item-answered {
-		position: relative;
-		display: inline-block;
-		float: left;
-		margin: 9px @spacing-sm 0 0;
-		width: 12px;
-		height: 12px;
-
-		background-color: @color-success;
-
-		.rounded(12px);
-	}
-
 	.list-item-group {
 		margin-left: 67px;
 
@@ -1094,6 +1081,28 @@ hr.partial-split {
 		width: 50px;
 		height: 50px;
 		margin: 10px @spacing 0 0;
+
+		.list-item-answered {
+			position: absolute;
+			width: 28px;
+			height: 28px;
+			top: -6px;
+			left: -4px;
+
+			background-color: @color-success;
+			border: 4px solid @color-body;
+			text-align: center;
+			color: @color-white;
+
+			.rounded(28px);
+
+			.icon-check {
+				float: left;
+				margin: 4px 0 0 4px;
+
+				font-size: 12px;
+			}
+		}
 	}
 
 	.list-item-count {
@@ -1452,5 +1461,13 @@ hr.partial-split {
 				}
 			}
 		}
+	}
+}
+
+.posts-avatar-padding {
+	padding-left: 70px;
+
+	.pagination {
+		margin-bottom: 0;
 	}
 }
