Update the icomoon fonts

--- a/public/less/fonts.less
+++ b/public/less/fonts.less
@@ -105,10 +105,16 @@
 	content: attr(data-icon);
 }
 
-.icon-trash:before { content: "\e600"; }
-.icon-check:before { content: "\e601"; }
-.icon-edit:before { content: "\e602"; }
-.icon-user:before { content: "\e603"; }
+.icon-trash:before { content: "\e601"; }
+.icon-check:before { content: "\e602"; }
+.icon-warning:before { content: "\e600"; }
+.icon-edit:before { content: "\e603"; }
+.icon-link:before { content: "\e608"; }
+.icon-message:before { content: "\e60a"; }
+.icon-arrow-back:before { content: "\e604"; }
+.icon-arrow-forward:before { content: "\e605"; }
+.icon-person:before { content: "\e606"; }
+.icon-share:before { content: "\e609"; }
 
 .octicon-alert:before { content: '\f02d'} /*  */
 .octicon-alignment-align:before { content: '\f08a'} /*  */
