--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -44,6 +44,7 @@
 @color-nav-main: #252728;
 
 @border-radius: 5px;
+@border-radius-sm: 2.5px;
 @border-radius-lg: 50px;
 @line-height: 1.75;
 @spacing-sm: 8px;
